--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,6 +21,7 @@
           <mat-icon matListItemIcon *ngIf="!!f.icon">{{ f.icon }}</mat-icon>
           <div matListItemTitle>{{ f.title }}</div>
         </a>
+        <mat-divider></mat-divider>
       </ng-container>
     </mat-nav-list>
   </mat-drawer>
