feat(app): adding a service to saveUser

--- a/src/app/form-page/form-page.component.html
+++ b/src/app/form-page/form-page.component.html
@@ -45,4 +45,10 @@
       </mat-form-field>
     </ng-container>
   </div>
+
+  <button
+    mat-button
+    type="submit"
+    color="primary"
+    (click)="submitForm()">Sauvegarder</button>
 </form>
