--- a/src/app/form-page/form-page.component.scss
+++ b/src/app/form-page/form-page.component.scss
@@ -22,4 +22,10 @@
   mat-checkbox {
     margin-left: 0.5rem;
   }
+
+}
+button {
+  display: flex;
+  margin: 1rem auto;
+  padding: 0.5rem 1.1rem;
 }
